[package]
name = "libc_alloc"
description = "A simple global allocator which hooks into libc's malloc/free"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
version = "1.0.4"
license = "MIT"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/libc_alloc"
homepage = "https://github.com/daniel5151/libc_alloc"
repository  = "https://github.com/daniel5151/libc_alloc"
keywords = ["malloc", "memalign", "libc", "allocator", "no_std"]
categories = ["development-tools::ffi", "embedded", "no-std"]

[dependencies]
